--- a/src/HermesAPI/project.json
+++ b/src/HermesAPI/project.json
@@ -42,15 +42,15 @@
 
   "publishOptions": {
     "include": [
-      "wwwroot",
-      "Views",
-      "Areas/**/Views",
       "appsettings.json",
       "web.config"
     ]
   },
 
   "scripts": {
-    "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
+    "postpublish": [
+      "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%",
+      "xcopy \"bin\\Debug\\netcoreapp1.0\\publish\" \"..\\..\\HermesAPI\""
+    ]
   }
 }
