Added scrollbar Added loading animation Added list entry effects

--- a/HermesWeb/HermesWeb.csproj
+++ b/HermesWeb/HermesWeb.csproj
@@ -48,6 +48,7 @@
     <Content Include="app\images\Destiny_20150915140922.jpg" />
     <Content Include="app\images\dubai-abudhabi.jpg" />
     <Content Include="app\images\future city high quality wallpaper.jpg" />
+    <Content Include="app\images\game039.png" />
     <Content Include="app\images\nice-nature-high-definition-wallpapers.jpg" />
     <Content Include="app\images\Phoenix_Convention_Center_-_South_on_3rd_St_-_2009-07-06.jpg" />
     <Content Include="app\images\Porsche-Logo-High-Quality-Wallpaper.jpg" />
@@ -73,6 +74,7 @@
     <Content Include="app\js\controllers\navbarController.min.js">
       <DependentUpon>navbarController.js</DependentUpon>
     </Content>
+    <Content Include="app\js\directives\ng-scrollbar.js" />
     <Content Include="app\js\services\dashService.js" />
     <Content Include="app\js\services\dashService.min.js">
       <DependentUpon>dashService.js</DependentUpon>
@@ -349,6 +351,7 @@
     <Content Include="app\views\partial\background.html" />
     <Content Include="app\views\partial\loading.html" />
     <Content Include="app\views\partial\navbar.html" />
+    <Content Include="app\views\partial\widgetloading.html" />
     <Content Include="favicon-16x16.png" />
     <Content Include="favicon-32x32.png" />
     <Content Include=".bowerrc" />
@@ -603,7 +606,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="app\js\directives\" />
     <Folder Include="app\js\filters\" />
   </ItemGroup>
   <ItemGroup>
