--- a/HermesWeb/bower.json
+++ b/HermesWeb/bower.json
@@ -8,7 +8,9 @@
     "font-awesome": "4.6.1",
     "bootstrap": "3.3.6",
     "angular-local-storage": "0.2.7",
-    "metro-bootstrap": "*"
+    "metro-bootstrap": "*",
+    "malihu-custom-scrollbar-plugin": "3.1.5",
+    "ng-scrollbars": "0.0.10"
   },
   "resolutions": {
     "font-awesome": "4.6.1",
